[project]
name = "APC_524_project"
version = "1.0.0"
requires-python = ">=3.7"

dependencies = [
  "matplotlib",
  "numba",
  "numpy",
  "pip",
  "pandas",
]

[project.optional-dependencies]
test = [
    "pytest",
    "uncertainties"
]

[build]
requires = ["hatchling"]
build-backend = "hatchling.build"
