[project]
name = "APC_524_project"
version = "1.0.0"
requires-python = ">=3.7"

dependencies = [
  "geopandas",
  "matplotlib",
  "numba",
  "numpy",
  "pip",
  "pandas",
  "shapely"
]

[project.optional-dependencies]
test = [
    "pytest",
    "uncertainties"
]

[build]
requires = ["hatchling"]
build-backend = "hatchling.build"
